@@ -144,24 +144,7 @@ static const char* inet_ntop(int af, const void* src, char* dst, int cnt)
 // Free functions to log
 //
 
-// XXX: Deprecated
-void CCLog(const char * format, ...)
-{
-    va_list args;
-    va_start(args, format);
-    log(format, args);
-    va_end(args);
-}
-
-void log(const char * format, ...)
-{
-    va_list args;
-    va_start(args, format);
-    log(format, args);
-    va_end(args);
-}
-
-void log(const char *format, va_list args)
+static void _log(const char *format, va_list args)
 {
     char buf[MAX_LOG_LENGTH];
 
@@ -176,7 +159,7 @@ void log(const char *format, va_list args)
     MultiByteToWideChar(CP_UTF8, 0, buf, -1, wszBuf, sizeof(wszBuf));
     OutputDebugStringW(wszBuf);
     OutputDebugStringA("\n");
-    
+
     WideCharToMultiByte(CP_ACP, 0, wszBuf, sizeof(wszBuf), buf, sizeof(buf), NULL, FALSE);
     printf("%s\n", buf);
 
@@ -189,6 +172,22 @@ void log(const char *format, va_list args)
     Director::getInstance()->getConsole()->log(buf);
 }
 
+// XXX: Deprecated
+void CCLog(const char * format, ...)
+{
+    va_list args;
+    va_start(args, format);
+    _log(format, args);
+    va_end(args);
+}
+
+void log(const char * format, ...)
+{
+    va_list args;
+    va_start(args, format);
+    _log(format, args);
+    va_end(args);
+}
 
 //
 // Console code
